--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Hashbrown Caserole</h1>
+        <h1>Hashbrown Casserole</h1>
     </header>
     <nav>
         <ul>
